📈 setting up first UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">7MinWorkoutApplication</string>
+    <string name="image">start image</string>
 </resources>
